# password-scanner

./: .gitignor  .gitignore  README.md  config.yml  password_scanner.py  requirements.txt  setup.cfg
assets/: results.csv  results.json
password_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testdata/: meetingplan.txt  test1.txt  test2.txt  test3.json  testlongtext.txt
