[metadata]

name = password-scanner

version = 0.1.0

author = Rumen Yordanov

author_email = rumenj2005@gmail.com

description = Local password scanner (authorized use only)

long_description = file: README.md

long_description_content_type = text/markdown

license = MIT

classifiers =

    Programming Language :: Python :: 3
    
    License :: OSI Approved :: MIT License
        
    Operating System :: POSIX :: Linux
            
            
            
[options]
            
py_modules = password_scanner
            
install_requires =
            
    pyyaml
                
    pdfminer.six
                    
    python-docx
                        
    pillow
                            
    pytesseract
                                
    python-magic
                                    
python_requires = >=3.8
                                    
                                    
                                    
[options.entry_points]
                                    
console_scripts =
                                    
    password-scanner = password_scanner:main
                                        
                                        
